sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:11: error: ';' expected but ',' found.
      ecart=ecart/1,3
                   ^